2004-08-30  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/ppc/hal/hal.c: Move the Doxygen documentation to a new
	group, 	hal_ppc, in order to avoid clash (and doxygen warnings)
	with x86 documentation.

2004-08-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_migrate): Initial implementation of a
	migration function.

	* nucleus/pod.c (xnpod_init, xnpod_shutdown): Remove useless calls
	to set_cpus_allowed.

	* nucleus, */system.h: Use cpumask_t for affinity, providing
	an 'unsigned long' based implementation for architectures other
	than the Linux kernel.

2004-08-29  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/pod.h (struct pod): Remove the usrthread member;
	it became meaningless with the dismissal of the threaded interrupt
	model.

	* nucleus: Prefer non-atomic bitops when applicable.

	* nucleus/pod.c (xnpod_schedule): Clarify the path to switch
	decision a bit.

2004-08-29  Marc Kleine-Budde <kleine-budde@gmx.de>

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Do not
	fiddle with Altivec-related information if Altivec support is not
	configured in.

2004-08-28  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_next_shot): Update timer shot
	anticipation.

2004-08-27  Philippe Gerum  <rpm@xenomai.org>

	* nucleus: Add support for execution timestamps aimed at chasing
	excessive jitter.

	* skins/rtai/pipe.c (__pipe_close_handler): Leave the pipe struct
	alive and wait for a subsequent call to rt_pipe_close() from the
	application.

2004-08-26  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Add 2.6.8rc1-r6c4.

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Integrate
	various bits of user-space context switching in a single area.

	* nucleus/timer.c (xntimer_do_timers): Optimize restart point.

	* arch/ppc/hal/hal.c (rthal_calibration_timer): Return the 1 tick
	(expressed as a count of nanoseconds) instead of zero. The latter
	is a special error value.
