@@ -18,6 +18,23 @@ config RTAI_HW_FPU
 	internet at the following URL:
 	http://www.intel.com/design/intarch/techinfo/Pentium/fpu.htm
 
+config RTAI_HW_APERIODIC_TIMER
+	bool "Enable aperiodic timer support"
+	default y
+	help
+	The nucleus can handle aperiodic timers that can be
+	programmed in one-shot mode on this architecture. In this
+	mode, timing accuracy is higher - since it is not rounded to a
+	constant time slice - at the expense of a lesser efficicency
+	when many timers are simultaneously active. The aperiodic mode
+	gives better results in configuration involving a few threads
+	requesting timing services over different time scales that
+	cannot be easily expressed as multiples of a single base tick,
+	or would lead to a waste of high frequency periodical
+	ticks. You can disable this support for this architecture to
+	save a few hundreds bytes if you plan to use the system timer
+	in periodic mode only.
+
 config RTAI_HW_NRCPUS
 	string "Number of CPUs (SMP-only)"
 	default 2
