@@ -427,6 +427,15 @@ AC_ARG_ENABLE(fpu,
 	esac])
 AC_MSG_RESULT(${CONFIG_RTAI_HW_FPU:-no})
 
+AC_MSG_CHECKING(for aperiodic timer support)
+AC_ARG_ENABLE(fpu,
+	[ --enable-aperiodic-timer		Enable aperiodic timer support],
+	[case "$enableval" in
+	y | yes) CONFIG_RTAI_HW_APERIODIC_TIMER=y ;;
+	*) unset CONFIG_RTAI_HW_APERIODIC_TIMER ;;
+	esac])
+AC_MSG_RESULT(${CONFIG_RTAI_HW_APERIODIC_TIMER:-no})
+
 AC_MSG_CHECKING(for debug symbols in kernel modules)
 AC_ARG_ENABLE(module-debug,
 	[ --enable-module-debug	Enable debug information in kernel modules],
@@ -623,6 +632,7 @@ AC_DEFINE_UNQUOTED(CONFIG_RTAI_HW_NRCPUS,$CONFIG_RTAI_HW_NRCPUS,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_HW_TIMER_LATENCY,$CONFIG_RTAI_HW_TIMER_LATENCY,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_HW_SCHED_LATENCY,$CONFIG_RTAI_HW_SCHED_LATENCY,[Kconfig])
 test \! x$CONFIG_RTAI_HW_FPU = x && AC_DEFINE(CONFIG_RTAI_HW_FPU,1,[Kconfig])
+test \! x$CONFIG_RTAI_HW_APERIODIC_TIMER = x && AC_DEFINE(CONFIG_RTAI_HW_APERIODIC_TIMER,1,[Kconfig])
 
 test x$CONFIG_RTAI_OPT_DEBUG = xy && AC_DEFINE(CONFIG_RTAI_OPT_DEBUG,1,[Kconfig])
 test x$CONFIG_RTAI_OPT_TIMESTAMPS = xy && AC_DEFINE(CONFIG_RTAI_OPT_TIMESTAMPS,1,[Kconfig])
