@@ -1023,11 +1023,11 @@ static int xnshadow_substitute_syscall (struct task_struct *curr,
 	    if (migrate) /* Shall we migrate to RTAI first? */
 		xnshadow_harden();
 
-#if XNARCH_HAVE_APERIODIC_TIMER
+#if CONFIG_RTAI_HW_APERIODIC_TIMER
 	    if (!testbits(nkpod->status,XNTMPER))
 		expire = xnpod_get_cpu_time();
 	    else
-#endif /* XNARCH_HAVE_APERIODIC_TIMER */
+#endif /* CONFIG_RTAI_HW_APERIODIC_TIMER */
 		expire = nkpod->jiffies;
 
 	    delay = xnshadow_ts2ticks(&t);
@@ -1036,11 +1036,11 @@ static int xnshadow_substitute_syscall (struct task_struct *curr,
 	    if (delay > 0)
 		xnpod_delay(delay);
 
-#if XNARCH_HAVE_APERIODIC_TIMER
+#if CONFIG_RTAI_HW_APERIODIC_TIMER
 	    if (!testbits(nkpod->status,XNTMPER))
 		now = xnpod_get_cpu_time();
 	    else
-#endif /* XNARCH_HAVE_APERIODIC_TIMER */
+#endif /* CONFIG_RTAI_HW_APERIODIC_TIMER */
 		now = nkpod->jiffies;
 
 	    if (now >= expire)
@@ -1092,11 +1092,11 @@ static int xnshadow_substitute_syscall (struct task_struct *curr,
 	    delay = xnshadow_tv2ticks(&itv.it_value);
 	    interval = xnshadow_tv2ticks(&itv.it_interval);
 
-#if XNARCH_HAVE_APERIODIC_TIMER
+#if CONFIG_RTAI_HW_APERIODIC_TIMER
 	    if (!testbits(nkpod->status,XNTMPER))
 		expire = xnpod_get_cpu_time();
 	    else
-#endif /* XNARCH_HAVE_APERIODIC_TIMER */
+#endif /* CONFIG_RTAI_HW_APERIODIC_TIMER */
 		expire = nkpod->jiffies;
 
 	    expire += delay;
